[gd_scene load_steps=3 format=3 uid="uid://dlbm5koe3uj84"]

[ext_resource type="Script" path="res://Scripts/menu/options.gd" id="1_n13cw"]
[ext_resource type="Texture2D" uid="uid://br10ejdxtpxv8" path="res://Assets/Images/a-few-minutes-late.png" id="3_21vx5"]

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_n13cw")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("3_21vx5")
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.5
offset_top = -158.0
offset_right = 210.5
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Platform" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Platform"]
layout_mode = 2
text = "Platform :"

[node name="InputChoice" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/Platform"]
unique_name_in_owner = true
layout_mode = 2

[node name="Difficulty" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Difficulty"]
layout_mode = 2
text = "Difficulty :"

[node name="DifficultyChoice" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/Difficulty"]
unique_name_in_owner = true
layout_mode = 2

[node name="Control2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MenuBtn" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Menu"

[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/Platform/InputChoice" to="." method="_on_platform_choice_item_selected"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/Difficulty/DifficultyChoice" to="." method="_on_difficulty_choice_item_selected"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/MenuBtn" to="." method="_on_menu_btn_button_down"]
